@@ -19,7 +19,6 @@ import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.error.InvalidCaseDataException;
-import uk.gov.hmcts.reform.finrem.caseorchestration.handler.SendOrderContestedAboutToSubmitHandler;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.HearingBundle;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.HearingBundleItems;
@@ -37,7 +36,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
@@ -51,7 +49,6 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 public class ContestedOrderController extends BaseController {
 
     private final ObjectMapper objectMapper;
-    private final SendOrderContestedAboutToSubmitHandler sendOrderContestedAboutToSubmitHandler;
 
     @PostMapping(path = "/contested/validateHearingDate", consumes = APPLICATION_JSON_VALUE, produces = APPLICATION_JSON_VALUE)
     @Operation(summary = "check hearing date")
@@ -107,7 +104,7 @@ public class ContestedOrderController extends BaseController {
                     .build())
                 .sorted(Comparator.nullsLast((e1, e2) -> e2.getValue().getHearingBundleDate()
                     .compareTo(e1.getValue().getHearingBundleDate())))
-                .collect(Collectors.toList());
+                .toList();
             caseData.put(HEARING_UPLOAD_BUNDLE_COLLECTION, updateUploadDateList);
         }
         return ResponseEntity.ok(AboutToStartOrSubmitCallbackResponse
@@ -124,7 +121,7 @@ public class ContestedOrderController extends BaseController {
             .hearingBundleDocuments(hd.getValue().getHearingBundleDocuments().stream()
                 .map(getHearingUploadBundleFunction(errors))
                 .sorted(Comparator.nullsLast((e1, e2) -> e2.getValue().getBundleUploadDate()
-                    .compareTo(e1.getValue().getBundleUploadDate()))).collect(Collectors.toList()))
+                    .compareTo(e1.getValue().getBundleUploadDate()))).toList())
             .hearingBundleDescription(hd.getValue().getHearingBundleDescription())
             .build();
     }
